syntax = "proto3";

package torii.sinks.sql;

// Starknet Felt252 - 32 bytes, efficiently encoded
message Felt252 {
    // Raw 32-byte field element (NOT hex string!)
    bytes value = 1;
}

// SQL operation event (insert/update)
message SqlOperation {
    // Table name
    string table = 1;

    // Operation type (insert, update, delete, etc.)
    string operation = 2;

    // Operation value
    uint64 value = 3;
}

// SQL filter for subscriptions
message SqlFilter {
    // Optional table name filter
    optional string table = 1;

    // Block number range
    optional uint64 block_number_gte = 2;
    optional uint64 block_number_lte = 3;
}

// ===== SqlSink gRPC Service =====

// Request to execute a SQL query
message QueryRequest {
    // SQL query string
    string query = 1;

    // Optional limit for result set
    optional int32 limit = 2;
}

// A single row in the query result
message QueryRow {
    // Column name -> value mapping (as JSON strings for flexibility)
    map<string, string> columns = 1;
}

// Response containing multiple rows (for unary Query RPC)
message QueryResponse {
    // All rows in the result set
    repeated QueryRow rows = 1;

    // Total number of rows returned
    int32 total_rows = 2;
}

// Request to get the database schema
message GetSchemaRequest {
    // Optional: filter by table name
    optional string table_name = 1;
}

// Schema information for a single table
message TableSchema {
    // Table name
    string name = 1;

    // Column definitions (name -> type)
    map<string, string> columns = 2;
}

// Response containing schema information
message GetSchemaResponse {
    // List of tables and their schemas
    repeated TableSchema tables = 1;
}

// Request to subscribe to SQL events (inserts/updates)
message SqlSubscribeRequest {
    // Client ID for tracking
    string client_id = 1;

    // Optional filters
    optional string table = 2;
    optional string operation = 3;  // "insert", "update", etc.
}

// Real-time SQL operation update
message SqlOperationUpdate {
    // The SQL operation that occurred
    SqlOperation operation = 1;

    // Timestamp of the update
    int64 timestamp = 2;
}

// SqlSink service - provides query capabilities for the SQL sink
service SqlSink {
    // Execute a SQL query and return all results (for small result sets)
    rpc Query(QueryRequest) returns (QueryResponse);

    // Execute a SQL query and stream results row-by-row (for large result sets)
    rpc StreamQuery(QueryRequest) returns (stream QueryRow);

    // Get the database schema
    rpc GetSchema(GetSchemaRequest) returns (GetSchemaResponse);

    // Subscribe to real-time SQL operations (inserts/updates as they happen)
    // This is a persistent stream that pushes updates when new data arrives
    rpc Subscribe(SqlSubscribeRequest) returns (stream SqlOperationUpdate);
}

